clusters/home/applications/home/mosquitto/mosquitto-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto
  namespace: home
  labels:
    app.kubernetes.io/name: mosquitto
    app.kubernetes.io/part-of: mosquitto
spec:
  ingressClassName: nginx
  rules:
    - host: "mosquitto.home.arpa"
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: mosquitto
                port:
                  number: 1883
